changes to finding donors

--- a/_finding_donors.ipynb
+++ b/_finding_donors.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "array(['<=50K', '>50K'], dtype=object)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
    "source": [
     "# Split the data into features and target label\n",
     "income_raw = data['income']\n",
-    "features_raw = data.drop('income', axis = 1)\n",
+    "features_raw = data.drop('income', axis=1)\n",
     "\n",
     "# Visualize skewed continuous features of original data\n",
     "vs.distribution(data)"
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -316,11 +316,11 @@
    "source": [
     "# Log-transform the skewed features\n",
     "skewed = ['capital-gain', 'capital-loss']\n",
-    "features_log_transformed = pd.DataFrame(data = features_raw)\n",
+    "features_log_transformed = pd.DataFrame(data=features_raw)\n",
     "features_log_transformed[skewed] = features_raw[skewed].apply(lambda x: np.log(x + 1))\n",
     "\n",
     "# Visualize the new log distributions\n",
-    "vs.distribution(features_log_transformed, transformed = True)"
+    "vs.distribution(features_log_transformed, transformed=True)"
    ]
   },
   {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -494,11 +494,11 @@
     "scaler = MinMaxScaler() # default=(0, 1)\n",
     "numerical = ['age', 'education-num', 'capital-gain', 'capital-loss', 'hours-per-week']\n",
     "\n",
-    "features_log_minmax_transform = pd.DataFrame(data = features_log_transformed)\n",
+    "features_log_minmax_transform = pd.DataFrame(data=features_log_transformed)\n",
     "features_log_minmax_transform[numerical] = scaler.fit_transform(features_log_transformed[numerical])\n",
     "\n",
     "# Show an example of a record with scaling applied\n",
-    "display(features_log_minmax_transform.head(n = 5))"
+    "display(features_log_minmax_transform.head(n=5))"
    ]
   },
   {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -532,8 +532,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "103 total features after one-hot encoding.\n",
-      "['age', 'education-num', 'capital-gain', 'capital-loss', 'hours-per-week', 'workclass_ Federal-gov', 'workclass_ Local-gov', 'workclass_ Private', 'workclass_ Self-emp-inc', 'workclass_ Self-emp-not-inc', 'workclass_ State-gov', 'workclass_ Without-pay', 'education_level_ 10th', 'education_level_ 11th', 'education_level_ 12th', 'education_level_ 1st-4th', 'education_level_ 5th-6th', 'education_level_ 7th-8th', 'education_level_ 9th', 'education_level_ Assoc-acdm', 'education_level_ Assoc-voc', 'education_level_ Bachelors', 'education_level_ Doctorate', 'education_level_ HS-grad', 'education_level_ Masters', 'education_level_ Preschool', 'education_level_ Prof-school', 'education_level_ Some-college', 'marital-status_ Divorced', 'marital-status_ Married-AF-spouse', 'marital-status_ Married-civ-spouse', 'marital-status_ Married-spouse-absent', 'marital-status_ Never-married', 'marital-status_ Separated', 'marital-status_ Widowed', 'occupation_ Adm-clerical', 'occupation_ Armed-Forces', 'occupation_ Craft-repair', 'occupation_ Exec-managerial', 'occupation_ Farming-fishing', 'occupation_ Handlers-cleaners', 'occupation_ Machine-op-inspct', 'occupation_ Other-service', 'occupation_ Priv-house-serv', 'occupation_ Prof-specialty', 'occupation_ Protective-serv', 'occupation_ Sales', 'occupation_ Tech-support', 'occupation_ Transport-moving', 'relationship_ Husband', 'relationship_ Not-in-family', 'relationship_ Other-relative', 'relationship_ Own-child', 'relationship_ Unmarried', 'relationship_ Wife', 'race_ Amer-Indian-Eskimo', 'race_ Asian-Pac-Islander', 'race_ Black', 'race_ Other', 'race_ White', 'sex_ Female', 'sex_ Male', 'native-country_ Cambodia', 'native-country_ Canada', 'native-country_ China', 'native-country_ Columbia', 'native-country_ Cuba', 'native-country_ Dominican-Republic', 'native-country_ Ecuador', 'native-country_ El-Salvador', 'native-country_ England', 'native-country_ France', 'native-country_ Germany', 'native-country_ Greece', 'native-country_ Guatemala', 'native-country_ Haiti', 'native-country_ Holand-Netherlands', 'native-country_ Honduras', 'native-country_ Hong', 'native-country_ Hungary', 'native-country_ India', 'native-country_ Iran', 'native-country_ Ireland', 'native-country_ Italy', 'native-country_ Jamaica', 'native-country_ Japan', 'native-country_ Laos', 'native-country_ Mexico', 'native-country_ Nicaragua', 'native-country_ Outlying-US(Guam-USVI-etc)', 'native-country_ Peru', 'native-country_ Philippines', 'native-country_ Poland', 'native-country_ Portugal', 'native-country_ Puerto-Rico', 'native-country_ Scotland', 'native-country_ South', 'native-country_ Taiwan', 'native-country_ Thailand', 'native-country_ Trinadad&Tobago', 'native-country_ United-States', 'native-country_ Vietnam', 'native-country_ Yugoslavia']\n"
+      "103 total features after one-hot encoding.\n"
      ]
     }
    ],
@@ -549,7 +548,7 @@
     "print(\"{} total features after one-hot encoding.\".format(len(encoded)))\n",
     "\n",
     "# Uncomment the following line to see the encoded feature names\n",
-    "print(encoded)"
+    "# print(encoded)"
    ]
   },
   {
@@ -564,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -581,10 +580,12 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Split the 'features' and 'income' data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features_final, \n",
-    "                                                    income, \n",
-    "                                                    test_size = 0.2, \n",
-    "                                                    random_state = 0)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    features_final, \n",
+    "    income, \n",
+    "    test_size = 0.2, \n",
+    "    random_state = 0\n",
+    ")\n",
     "\n",
     "# Show the results of the split\n",
     "print(\"Training set has {} samples.\".format(X_train.shape[0]))\n",
@@ -648,11 +649,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.78439697492371\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_records = data.size\n",
+    "n_greater_50k = data.loc[data.income == \">50K\"].size\n",
+    "\n",
+    "greater_percent = n_greater_50k / n_records * 100\n",
+    "print(greater_percent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.78439697492371\n"
+     ]
+    }
+   ],
+   "source": [
+    "# precision = [True Positives/(True Positives + False Positives)]\n",
+    "precision = n_greater_50k / (n_greater_50k + n_at_most_50k) * 100\n",
+    "print(precision)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# recall = [True Positives/(True Positives + False Negatives)]\n",
+    "recall = n_greater_50k / (n_greater_50k + 0) * 100\n",
+    "print(recall) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "# F0.5 = (1+ (0.5^2)) * (precision * recall) / (((0.5^2) * precision) + recall)\n",
+    "# F0.5 = (1+ 0.25) * (precision * recall) / (((0.25) * precision) + recall)\n",
+    "# F0.5 = 1.25 * precision * recall / ((0.25 * precision) + recall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29.172913543228383\n"
+     ]
+    }
+   ],
+   "source": [
+    "f0_5 = 1.25 * precision * recall / ((0.25 * precision) + recall)\n",
+    "print(f0_5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Predictor: [Accuracy score: 24.7800, F-score: 29.1700]\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "TP = np.sum(income) # Counting the ones as this is the naive case. Note that 'income' is the 'income_raw' data \n",
@@ -663,12 +760,12 @@
     "FN = 0 # No predicted negatives in the naive case\n",
     "'''\n",
     "# TODO: Calculate accuracy, precision and recall\n",
-    "accuracy = None\n",
-    "recall = None\n",
-    "precision = None\n",
+    "accuracy = 24.78\n",
+    "recall = 100.00\n",
+    "precision = 24.79\n",
     "\n",
     "# TODO: Calculate F-score using the formula above for beta = 0.5 and correct values for precision and recall.\n",
-    "fscore = None\n",
+    "fscore = 29.17\n",
     "\n",
     "# Print the results \n",
     "print(\"Naive Predictor: [Accuracy score: {:.4f}, F-score: {:.4f}]\".format(accuracy, fscore))"
@@ -710,7 +807,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "# Answer: \n",
+    "\n",
+    "\n",
+    "### The three models:\n",
+    "* #### Naive Bayes\n",
+    "* #### Ensemble Method\n",
+    "* #### SVM\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Naive Bayes\n",
+    "* Real world application:\n",
+    " * Spam detection\n",
+    " \n",
+    " \n",
+    "* Strengths: \n",
+    " * Needs less data than other models\n",
+    " * Can handle a large amount of features \n",
+    " * Relatively unaffected by irrelevant features\n",
+    " * Simple\n",
+    " * Rarely need to tune parameters \n",
+    " * Rarely overfits\n",
+    " * Compute time on training and test is fast for the data it can handle\n",
+    " \n",
+    " \n",
+    "* Weaknesses:\n",
+    " * It makes a strong assumption about the data distribution  \n",
+    " * If features aren't independent it can fail\n",
+    " \n",
+    " \n",
+    "* Good Candidate:\n",
+    " * Many categories are independent, e.g. race, sex, age\n",
+    " * Quick with many features (encoded has 103)\n",
+    " * Powerful predictive power and a good classifier\n",
+    " \n",
+    " \n",
+    "### Ensemble Methods\n",
+    "* Real world application:\n",
+    " * Fraud detection\n",
+    " \n",
+    " \n",
+    "* Strengths: \n",
+    " * Can understand non-linear relationships\n",
+    " * Linear models have high bias & low variance, whereas decision trees have low bias & high variance. Ensemble methods with bagging, boosting, etc can hugely reduce variance for decision trees and reduce bias in linear models\n",
+    " \n",
+    " \n",
+    "* Weaknesses:\n",
+    " * Can easily overfit \n",
+    " \n",
+    " \n",
+    "* Good Candidate:\n",
+    " * Can understand all sorts non-linear relationships between features\n",
+    " * Is a powerful classifier\n",
+    "\n",
+    "\n",
+    "### SVM\n",
+    "* Real world application:\n",
+    " * Fraud detection\n",
+    " \n",
+    " \n",
+    "* Strengths: \n",
+    " * Can understand non-linear relationships\n",
+    " * With bagging, boosting, etc it can reduce its natural variance\n",
+    " \n",
+    " \n",
+    "* Weaknesses:\n",
+    " * Can easily overfit \n",
+    " \n",
+    " \n",
+    "* Good Candidate:\n",
+    " * Can understand all sorts non-linear relationships between features\n",
+    " * Is a powerful classifier"
    ]
   },
   {
