adding to my notebook

--- a/_finding_donors.ipynb
+++ b/_finding_donors.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -541,7 +541,7 @@
     "features_final = pd.get_dummies(features_log_minmax_transform)\n",
     "\n",
     "# TODO: Encode the 'income_raw' data to numerical values\n",
-    "income = pd.get_dummies(income_raw)\n",
+    "income = income_raw.apply(lambda x: 1 if x == \">50K\" else 0)\n",
     "\n",
     "# Print the number of features after one-hot encoding\n",
     "encoded = list(features_final.columns)\n",
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -591,6 +591,13 @@
     "print(\"Training set has {} samples.\".format(X_train.shape[0]))\n",
     "print(\"Testing set has {} samples.\".format(X_test.shape[0]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -649,14 +656,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.78439697492371\n"
+      "0.2478439697492371\n"
      ]
     }
    ],
@@ -664,13 +671,13 @@
     "n_records = data.size\n",
     "n_greater_50k = data.loc[data.income == \">50K\"].size\n",
     "\n",
-    "greater_percent = n_greater_50k / n_records * 100\n",
+    "greater_percent = n_greater_50k / n_records\n",
     "print(greater_percent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -679,38 +686,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.78439697492371\n"
+      "0.2478439697492371\n"
      ]
     }
    ],
    "source": [
     "# precision = [True Positives/(True Positives + False Positives)]\n",
-    "precision = n_greater_50k / (n_greater_50k + n_at_most_50k) * 100\n",
+    "precision = n_greater_50k / (n_greater_50k + n_at_most_50k) \n",
     "print(precision)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100.0\n"
+      "1.0\n"
      ]
     }
    ],
    "source": [
     "# recall = [True Positives/(True Positives + False Negatives)]\n",
-    "recall = n_greater_50k / (n_greater_50k + 0) * 100\n",
+    "recall = n_greater_50k / (n_greater_50k + 0) \n",
     "print(recall) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,14 +728,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29.172913543228383\n"
+      "0.29172913543228385\n"
      ]
     }
    ],
@@ -739,14 +746,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive Predictor: [Accuracy score: 24.7800, F-score: 29.1700]\n"
+      "Naive Predictor: [Accuracy score: 0.2478, F-score: 0.2917]\n"
      ]
     }
    ],
@@ -760,12 +767,12 @@
     "FN = 0 # No predicted negatives in the naive case\n",
     "'''\n",
     "# TODO: Calculate accuracy, precision and recall\n",
-    "accuracy = 24.78\n",
-    "recall = 100.00\n",
-    "precision = 24.79\n",
+    "accuracy = n_greater_50k / n_records\n",
+    "recall = n_greater_50k / (n_greater_50k + 0)\n",
+    "precision = n_greater_50k / (n_greater_50k + n_at_most_50k) \n",
     "\n",
     "# TODO: Calculate F-score using the formula above for beta = 0.5 and correct values for precision and recall.\n",
-    "fscore = 29.17\n",
+    "fscore = 1.25 * precision * recall / ((0.25 * precision) + recall)\n",
     "\n",
     "# Print the results \n",
     "print(\"Naive Predictor: [Accuracy score: {:.4f}, F-score: {:.4f}]\".format(accuracy, fscore))"
@@ -805,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,8 +828,8 @@
     "\n",
     "### The three models:\n",
     "* #### Naive Bayes\n",
-    "* #### Ensemble Methods\n",
-    "* #### SVM\n",
+    "* #### Ensemble Methods e.g. Random Forest Classifer\n",
+    "* #### SVM e.g. Support Vector Classifier\n",
     "\n",
     "\n",
     "\n",
@@ -852,18 +859,22 @@
     " * Powerful predictive power and a good classifier\n",
     " \n",
     " \n",
-    "### Ensemble Methods\n",
+    "### Ensemble Methods e.g. Random Forest, Gradient Boosting\n",
     "* Real world application:\n",
     " * Fraud detection\n",
+    " * Predicting Financial Markets\n",
     " \n",
     " \n",
     "* Strengths: \n",
     " * Can understand non-linear relationships\n",
     " * Linear models have high bias & low variance, whereas decision trees have low bias & high variance. Ensemble methods with bagging, boosting, etc can hugely reduce variance for decision trees and reduce bias in linear models\n",
+    " * Can scale quickly\n",
     " \n",
     " \n",
     "* Weaknesses:\n",
-    " * Can easily overfit \n",
+    " * Can easily overfit\n",
+    " * Many trees can lead to slow computation time training and predicting\n",
+    " * Can be less effective on large and noisy datasets with classes that overlap\n",
     " \n",
     " \n",
     "* Good Candidate:\n",
@@ -871,23 +882,28 @@
     " * Is a powerful classifier\n",
     "\n",
     "\n",
-    "### SVM *todo*\n",
+    "### SVM \n",
     "* Real world application:\n",
     " * Fraud detection\n",
+    " * Image recogonition\n",
     " \n",
     " \n",
     "* Strengths: \n",
     " * Can understand non-linear relationships\n",
     " * With bagging, boosting, etc it can reduce its natural variance\n",
+    " * Works well in higher dimensional space\n",
+    " * Is versitile as it can use common kernals (e.g. RBF) or custom kernals\n",
     " \n",
     " \n",
     "* Weaknesses:\n",
-    " * Can easily overfit \n",
+    " * Can easily overfit\n",
+    " * Also can be less effective on large and noisy datasets with classes that overlap\n",
+    " * Can take a long time to train and predict\n",
     " \n",
     " \n",
     "* Good Candidate:\n",
     " * Can understand all sorts non-linear relationships between features\n",
-    " * Is a powerful classifier"
+    " * Is a powerful classifier and particularly effective as we have over 100 features"
    ]
   },
   {
@@ -908,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,8 +946,7 @@
     "    \n",
     "    # TODO: Fit the learner to the training data using slicing with 'sample_size' using .fit(training_features[:], training_labels[:])\n",
     "    start = time() # Get start time\n",
-    "    learner = learner\n",
-    "    learner.fit(X_train[:300], y_train[:300])\n",
+    "    learner.fit(X_train[:sample_size], y_train[:sample_size])\n",
     "    end = time() # Get end time\n",
     "    \n",
     "    # TODO: Calculate the training time\n",
@@ -940,8 +955,8 @@
     "    # TODO: Get the predictions on the test set(X_test),\n",
     "    # then get predictions on the first 300 training samples(X_train) using .predict()\n",
     "    start = time() # Get start time\n",
-    "    predictions_test = learn.predict(X_test)\n",
-    "    predictions_train = learn.predict(X_train[:300])\n",
+    "    predictions_test = learner.predict(X_test)\n",
+    "    predictions_train = learner.predict(X_train[:300])\n",
     "    end = time() # Get end time\n",
     "    \n",
     "    # TODO: Calculate the total prediction time\n",
@@ -954,10 +969,10 @@
     "    results['acc_test'] = accuracy_score(y_test, predictions_test)\n",
     "    \n",
     "    # TODO: Compute F-score on the the first 300 training samples using fbeta_score()\n",
-    "    results['f_train'] = fbeta_score(y_train[:300], predictions_train, beta=1)\n",
+    "    results['f_train'] = fbeta_score(y_train[:300], predictions_train, beta=0.5)\n",
     "        \n",
     "    # TODO: Compute F-score on the test set which is y_test\n",
-    "    results['f_test'] = fbeta_score(y_test, predictions_test, beta=1)\n",
+    "    results['f_test'] = fbeta_score(y_test, predictions_test, beta=0.5)\n",
     "       \n",
     "    # Success\n",
     "    print(\"{} trained on {} samples.\".format(learner.__class__.__name__, sample_size))\n",
@@ -985,25 +1000,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Import the three supervised learning models from sklearn\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "from sklearn.svm import SVC\n",
     "\n",
     "# TODO: Initialize the three models\n",
-    "clf_A = None\n",
-    "clf_B = None\n",
-    "clf_C = None\n",
+    "clf_A = MultinomialNB()\n",
+    "clf_B = RandomForestClassifier(random_state=10)\n",
+    "clf_C = GradientBoostingClassifier(random_state=10)\n",
     "\n",
     "# TODO: Calculate the number of samples for 1%, 10%, and 100% of the training data\n",
     "# HINT: samples_100 is the entire training set i.e. len(y_train)\n",
     "# HINT: samples_10 is 10% of samples_100 (ensure to set the count of the values to be `int` and not `float`)\n",
     "# HINT: samples_1 is 1% of samples_100 (ensure to set the count of the values to be `int` and not `float`)\n",
-    "samples_100 = None\n",
-    "samples_10 = None\n",
-    "samples_1 = None\n",
+    "samples_100 = len(X_train)\n",
+    "samples_10 = int(len(X_train) / 10)\n",
+    "samples_1 = int(len(X_train) / 100)\n",
     "\n",
     "# Collect results on the learners\n",
     "results = {}\n",
@@ -1046,7 +1062,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "The metrics suggest the best model is the GradientBoostingClassifier:\n",
+    "* Has the highest F-score and accuracy with 100% of the data\n",
+    "* It is much faster the RandomForest, but slower the Naive Bayes\n",
+    "* It hasn't overfit much on the training data either\n"
    ]
   },
   {
@@ -1066,7 +1085,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** "
+    "In classification problems, like ours, we want to use a model to draw a boundry (or boundries) in the data where we can say everything in this area is \">50K\" and everything in this area is \"<=50K\". Our model will look at some training data and learn things about the data, then it will be exposed to a test set of data and put to use what it learnt when being trained. The predictions it makes on the test data are analysed as metrics, such as accuracy, and with these we can decide on the effectiness of our model. When drawing the line (or lines) the model will probably misclassify points and we can consider this as a classification error.\n",
+    "\n",
+    "Now a support vector classifier is a model that tries to classify data by splitting it with a line. However SVCs aim to maximise the margin of the line, this is the space between the line and the points it classifies. The belief is that the best line seperating 2 groups of points is one that is furthest away from both groups. Because of this belief we want to punish lines that get too close to data points, this will be the margin error.\n",
+    "\n",
+    "When training a SVC we can use a set of parameters to tweak its behaviour. If we want to minimise our classification error we can use the hyperparameter C: by increasing it we tell the SVC to try and correctly classify the points and to pay less attention to the margin, but if we make it small we tell it to prioritise the margin and that we care more about the margin error than the classification error.\n",
+    "\n",
+    "SVC also can work in multidimensional space. They can enter much higher dimensions to find planes that better seperate the data than the planes or lines avalible in lower dimensions. This can be incredibly effective at finding soltutions to complex problems but it can also have a tendancy to overfit. We can use another hyperparameter, gamma, to tell our model how specific we want it to be. Large gamma will create more specific solutions, and therefore will tend to overfit whereas a small gamma will create more generic solutions and therefore tend to underfit.\n",
+    "\n"
    ]
   },
   {
@@ -1091,28 +1117,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Import 'GridSearchCV', 'make_scorer', and any other necessary libraries\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import make_scorer\n",
     "\n",
     "# TODO: Initialize the classifier\n",
-    "clf = None\n",
+    "clf = GradientBoostingClassifier(random_state=10)\n",
     "\n",
     "# TODO: Create the parameters list you wish to tune, using a dictionary if needed.\n",
     "# HINT: parameters = {'parameter_1': [value1, value2], 'parameter_2': [value1, value2]}\n",
-    "parameters = None\n",
+    "parameters = {\n",
+    "    'max_depth': [3, 5, 7],\n",
+    "    'n_estimators': [25, 100, 175, 250, 325],\n",
+    "    'min_samples_split': [3, 5, 7],\n",
+    "    'min_samples_leaf': [3, 5, 7],\n",
+    "    'learning_rate': [0.1, 0.7, 1.3]\n",
+    "}\n",
     "\n",
     "# TODO: Make an fbeta_score scoring object using make_scorer()\n",
-    "scorer = None\n",
+    "scorer = make_scorer(fbeta_score, beta=0.5)\n",
     "\n",
     "# TODO: Perform grid search on the classifier using 'scorer' as the scoring method using GridSearchCV()\n",
-    "grid_obj = None\n",
+    "grid_obj = GridSearchCV(clf, scoring=scorer, param_grid=parameters)\n",
     "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters using fit()\n",
-    "grid_fit = None\n",
+    "grid_fit = grid_obj.fit(X_train, y_train)\n",
     "\n",
     "# Get the estimator\n",
     "best_clf = grid_fit.best_estimator_\n",
@@ -1186,7 +1218,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "he five features I belive most important for prediction in the order of importance are:\n",
+    "\n",
+    "1. Age: there should be a positive correlation between age and income, generally speaking you earn more as you get older\n",
+    "2. Capital Gain: this is a measure of how much profit someone is on capital and should correlate with income\n",
+    "3. Capital Loss: the reverse of the above\n",
+    "4. Occupation: Generally speaking job title can be a good indication of how much someone is earning, e.g. Lawyer > Nurse \n",
+    "5. Education Level: Again, generally speaking, people with higher education levels tend to earn more than those without higher education\n"
    ]
   },
   {
@@ -1205,19 +1243,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Import a supervised learning model that has 'feature_importances_'\n",
-    "\n",
+    "# done\n",
     "\n",
     "# TODO: Train the supervised model on the training set using .fit(X_train, y_train)\n",
-    "model = None\n",
+    "model = GradientBoostingClassifier(random_state=10)\n",
     "\n",
     "# TODO: Extract the feature importances using .feature_importances_ \n",
-    "importances = None\n",
+    "importances = model.feature_importances_\n",
     "\n",
     "# Plot\n",
     "vs.feature_plot(importances, X_train, y_train)"
@@ -1311,18 +1347,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
